--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,6 +7,9 @@
     {Astro.url.hostname} / last updated {import.meta.env.VITE_BUILD_DATE} /
     <a href="https://github.com/asyomei/asyomei.github.io">source code</a>
   </div>
+  <div>
+    inspired by <a href="https://tei.su">tei.su</a> (cute)
+  </div>
 </footer>
 
 <style>
@@ -21,12 +24,11 @@
       width: 93%;
     }
 
-    align-items: center;
     display: flex;
-    gap: 8px;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin-top: 24px;
-    position: relative;
+    line-height: 12px;
 
     &,
     * {
