refactor: update info

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ const CHB_ANILIST = "https://anilist.co/anime/59/chobits";
         <a class="nick" href="https://mynickname.com/id1805155">asyomei</a>
       </b> aka <b>
         <a class="nick" href="https://mynickname.com/vabgalimov">vabgalimov</a>
-      </b> 🌻
+      </b>
     </div>
     <div>full-time student, part-time js/ts developer (not really)</div>
     <div>
@@ -29,7 +29,7 @@ const CHB_ANILIST = "https://anilist.co/anime/59/chobits";
       <a href="https://github.com/asyomei">github page</a>
     </div>
   </Section>
-  <Section title="extremely interesting info (no):">
+  <Section title="some information about me:">
     <TextTable>
       <div>birthday</div>
       <div>feb 9 (aquarius ♒)</div>
@@ -41,7 +41,7 @@ const CHB_ANILIST = "https://anilist.co/anime/59/chobits";
       </div>
 
       <div>fav color</div>
-      <div>#ffffff <span class="fav-color"></span></div>
+      <div>white <span class="fav-color"></span></div>
 
       <div>fav flower</div>
       <div>
@@ -75,11 +75,7 @@ const CHB_ANILIST = "https://anilist.co/anime/59/chobits";
       </div>
 
       <div>email</div>
-      <div>
-        <a href="mailto:vabgalimov@vivaldi.net" class="email">
-          vabgalimov @ vivaldi.net
-        </a>
-      </div>
+      <div>vadim @ asyomei.org</div>
     </TextTable>
   </Section>
   <Section title="other links:">
@@ -129,9 +125,5 @@ const CHB_ANILIST = "https://anilist.co/anime/59/chobits";
   .nick {
     color: var(--text-primary);
     text-decoration: none;
-  }
-
-  .email {
-    color: var(--text-primary);
   }
 </style>
