fix: change source code url

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
 <footer class="footer">
   <div>
     {Astro.url.hostname} / last updated {import.meta.env.VITE_BUILD_DATE} /
-    <a href="https://github.com/asyomei/asyomei.github.io">source code</a>
+    <a href="https://github.com/asyomei/asyomei.org">source code</a>
   </div>
   <div>
     inspired by <a href="https://tei.su">tei.su</a> (cute)
